# CMakeList.txt : CMake project for codewars.com, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("codewars.com")

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

# Add source to this project's executable.
add_executable (codewars.com "codewars.com.cpp" "codewars.com.h")

# TODO: Add tests and install targets if needed.
